<resources>
    <string name="app_name">Cad Fish</string>

    <string name="texto_botao_logar">Logar</string>
    <string name="texto_inserir_senha">Insira sua senha</string>
    <string name="texto_inserir_email">Insira seu e-mail</string>
    <string name="nao_tem_conta">Ainda não tem conta? Cadastre-se</string>
    <string name="texto_insirir_nome">Insira seu nome</string>
    <string name="texto_confirmar_senha">Confirme a sua senha</string>
    <string name="texto_bt_cadastrar_usuario">Cadastrar Usuário</string>
    <string name="texto_inserir_especie_peixe">Insira a espécie do Peixe</string>
    <string name="texto_inserir_tamanho">Insira o comprimento do peixe (cm)</string>
    <string name="texto_inserir_peso_peixe">Insira o peso do peixe (kg)</string>
    <string name="texto_bt_cadastrar_peixe">CADASTRAR PEIXE</string>
    <string name="title_activity_maps_localizacao">Map</string>
    <string name="texto_proximo">Próximo</string>
    <string name="texto_anterior">Anterior</string>
    <string name="texto_inserir_marca_tag">Insira a Marca Tag do Peixe</string>
    <string name="texto_carregar_imagem">Carregar Imagem</string>
    <string name="texto_localizacao">Localização</string>
    <string name="texto_finalizar_cadastro">Finalizar Cadastro</string>
    <string name="text_selecionar_especie">Selecione a Espécie</string>


    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirmar_localizacao">Confirmar localização</string>
    <string name="texto_finalizar">Finalizar</string>
    <string-array name="peixes">
        <item>Tambaqui</item>
        <item>Pacu</item>
        <item>Pirarucu</item>
        <item>Pirarara</item>
        <item>Tucunaré</item>
        <item>Piranha</item>
    </string-array>

</resources>
