<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.cadastro_peixe.CadastroDePeixePasso3">

    <Button
        android:id="@+id/buttonNextPasso3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableRight="@drawable/ic_next_24dp"
        android:padding="8sp"
        android:text="@string/texto_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonBackPasso3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_back24dp"
        android:padding="8sp"
        android:text="@string/texto_anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagePeixe"
        android:layout_width="209dp"
        android:layout_height="198dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/peixe"
        app:civ_border_color="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:onClick="carregarArmazenamento"
        app:layout_constraintBottom_toBottomOf="@+id/imagePeixe"
        app:layout_constraintEnd_toEndOf="@+id/imagePeixe"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/imagePeixe"
        app:srcCompat="@drawable/ic_folder_black_24dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:onClick="carregarCamera"
        app:layout_constraintBottom_toBottomOf="@+id/imagePeixe"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/imagePeixe"
        app:layout_constraintTop_toTopOf="@+id/imagePeixe"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

    <ImageView
        android:id="@+id/pesquisarLocation"
        android:layout_width="45dp"
        android:layout_height="73dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:onClick="abrirMapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/texto_localizacao"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/texto_carregar_imagem"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="292dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/bg_edit_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLocalizacao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>